Decouple server and client state machine

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,6 @@ dotnet_diagnostic.CA1028.severity = none
 
 # CA2007: Consider calling ConfigureAwait on the awaited task
 dotnet_diagnostic.CA2007.severity = none
+
+# CA1814: Prefer jagged arrays over multidimensional
+dotnet_diagnostic.CA1814.severity = none
